compiler/testData/diagnostics/tests/deprecated/objectUsage.kt
// RUN_PIPELINE_TILL: BACKEND
// FIR_IDENTICAL
@Deprecated("Object")
object Obsolete {
    fun use() {}
}

fun useObject() {
    <!DEPRECATION!>Obsolete<!>.use()
    val x = <!DEPRECATION!>Obsolete<!>
}
